# six_dof_robot_arm

./: .gitignore  README.md
src/my_arm_description/: .gitignore  CMakeLists.txt  package.xml
src/my_arm_description/launch/: sim_arm.launch  view_arm.launch
src/my_arm_description/urdf/: six_dof_arm.urdf  six_dof_arm.xacro
src/my_arm_gazebo/: CMakeLists.txt  package.xml
src/my_arm_gazebo/config/: controllers.yaml  gazebo_control.yaml
src/my_arm_gazebo/launch/: controllers.launch  sim_arm.launch
